# lsl_viewer

./: README.md  pyproject.toml  requirements.txt
src/lsl_viewer/: __init__.py  app.py  config.py  csv_logger.py  inlet.py  outlet.py  plotting.py
